bakerydemo/static/css/main.css
/* The bakery demo avoids using tooling so doesn't use SASS. This is a static */
/* CSS file that extends Bootstrap. It's deliberately verbose to aid          */
/* readability with global themes, themes for each list view and themes for   */
/* each detail view                                                           */
/* 1. Global styles --------------------------------------------------------- */
/* 2. Page header ----------------------------------------------------------- */
/* 3. Main menu ------------------------------------------------------------- */
/* 4. Breadcrumb ------------------------------------------------------------ */
/* 5. Location styles ------------------------------------------------------- */
/* 6. Blog styles ----------------------------------------------------------- */
/* 7. Bread styles ---------------------------------------------------------- */
/* 8. Form styles ----------------------------------------------------------- */
/* 9. Homepage styles ------------------------------------------------------- */
/* 9. Miscellaneous/ Helper styles ------------------------------------------ */

/* Global styles */
@import url('https://fonts.googleapis.com/css?family=Open+Sans|Rubik');


body {
  padding-top: 0;
  padding-bottom: 0;
  font-size: 19px;
  font-family: 'Open Sans', sans-serif;
  background: rgb(255,255,255);
  background: linear-gradient(135deg,  rgba(255,255,255,1) 0%,rgba(255,255,255,1) 50%,rgba(233,228,221,1) 100%);
  min-height: 100vh;
}

@media (min-width: 768px) {
  body {
    font-size: 22px;
  }
}

h1 {
  font-weight: 300;

  font-family: 'Rubik', sans-serif;
  position: relative;
}

.hero h1 {
  color: white;
}

h2 {
  font-weight: 900;

  font-family: 'Rubik', sans-serif;
  color: #C2CA2F;
}

h3 {
  font-weight: 900;

  font-family: 'Rubik', sans-serif;
  color: #C2CA2F;
}

h4 {
  font-weight: 600;

  font-family: 'Rubik', sans-serif;
  color: #C2CA2F;
  font-size: 22px;
}

p {
  margin: 0 0 30px;
  color: #444;
}

a, a:focus, a:visited {
  color: #13879b;
  text-decoration: none;
}

a:hover {
  color: #13879b;
  text-decoration: none;
}

a.btn {
  background-color: #13879b;
  color: white;
  display: inline-block;

  font-family: 'Rubik', sans-serif;
  font-size: 16px;
  font-weight: 300;
  letter-spacing: 0.15em;
  padding: 15px 20px;
  text-transform: uppercase;
}

a.btn:hover {
  background-color: #13879b;
  color: white;
}

a.btn-sm {
  border-radius: 4px;
  font-size: 10px;
  line-height: normal;
  padding: 6px 8px;
}

.header input {
  border-radius: 3px;
  border: none;
  font-size: 18px;
  padding: 10px;
  width: 100%;
}

/* queries for type */
@media (min-width: 768px) {
  h1 {
    font-size: 60px;
  }

  .stand-first {
    font-size: 26px;
  }

  .intro {
    font-size: 30px;
    margin: 0 0 60px;
  }

  p {
    margin: 0 0 30px;
  }
}

ul {
  margin: 0 0 30px;
}

@media (min-width: 768px) {
  ul {
    margin: 0 0 50px;
  }
}

figure {
  margin: 0 0 30px;
  position: relative;
}
@media (min-width: 768px) {
  figure {
    margin: 0 0 50px;
  }
}
figcaption {
  background-color: rgba(99,33,13,0.8);
  bottom: 0;
  color: white;

  font-family: 'Rubik', sans-serif;
  font-size: 16px;
  font-weight: 300;
  left: 0;
  padding: 10px;
  position: absolute;
  width: 75%;
}
img {
  display: block;
  width: 100%;
}

/* Generic detail page styles */
.intro {
  font-family: 'Rubik', sans-serif;
  font-weight: 300;
  margin: 0 0 40px;
  font-size: 28px;
}
.stand-first {
  color: rgba(255,255,255,0.8);
  margin: 0;
}

/* Hero image area */
.hero {
  background-size: cover;
  background-position: center;
  padding: 100px 0 30px 0;
  position: relative;
  margin: 0 0 30px;
}
content[role="main"] {
  padding-top: 205px;
  display: block;
}
/* forces main content for blogs to the center */
content[role="main"] > .container > .row > .col-md-8 {
  margin: 0 auto;
  float: none;
}
@media screen and (min-width: 768px) {
  content[role="main"] {
    padding-top: 0;
  }
  .hero {
    padding: 200px 0 60px 0;
    margin: 0 0 40px;
  }
}
.hero-gradient-mask {
  position: absolute;
  width: 100%;
  height: 100%;
  bottom: 0;
  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.01) 1%,rgba(0,0,0,1) 100%);
}
blockquote {
  border-left: 5px solid #13879b;
  margin: 0 0 50px;
}
blockquote p {
  font-size: 30px;
  margin: 0 0 10px;
}
blockquote footer::before {
  display: none;
}
blockquote footer p {
  font-size: 1.8em;
  font-style: italic;
}
cite {

  font-family: 'Rubik', sans-serif;
  text-transform: uppercase;
  color: #888;
  font-size: 12px;
  font-style: normal;
  letter-spacing: 0.15em;
}

@media screen and (min-width: 768px) {
  .header,
  .footer {
    padding-right: 0;
    padding-left: 0;
  }
}

/* Page header */
.header {
  padding: 0;
  width: 100%;
  background: rgba(255,255,255,0.8);
  z-index: 10;
  position: fixed;
}
@media (max-width: 768px) {
  .header {
    position: relative;
  }
}
.header .container .row .col-lg-12 {
  padding-top: 1.2em;
  padding-bottom: 1.2em;
  padding-left: 1.2em;
  display: table;
  float: none;
  width: 100%;
}
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
}
/* Logo */
.logo, .logo:visited, .logo:focus {
  display: table-cell;
  vertical-align: middle;
  padding: 0;
  color: black;
  font-size: 30px;
  font-weight: 300;
  margin: 0 0 0;
  float: none;
}
.logo img {
  width: 120px;
}
@media screen and (min-width: 40.063em) {
  .logo img {
      width: 200px;
  }
}

.logo:hover {
  color: #13879b;
  text-decoration: none;
}
.search {
  display: none;
  margin: 15px 0 0 0;
  position: relative;
}
@media (min-width: 768px) {
  .search {
    display: inline-block;
    float: right;
    margin: 0 0 0 30px;
  }
}
.search-icon {
  display: block;
  display: inline-block;
  height: 20px;
  position: absolute;
  right: 10px;
  top: 10px;
  width: 20px;
}
.search-icon svg {
  fill: #13879b;
  height: 20px;
  width: 20px;
}
/* ... */

